# psyplot

./: .appveyor.yml  .buildinfo  .cruft.json  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.rst  about.html  accessors.html  api.html  appveyor.yml  changelog.html  codemeta.json  command_line.html  configuration.html  contribute.html  contributing.html  environment.yml  genindex.html  getting_started.html  index.html  installing.html  objects.inv  paper.bib  paper.md  plugins.html  postBuild  projects.html  py-modindex.html  (+10 more)
.circleci/: config.yml
.doctrees/: about.doctree  accessors.doctree  changelog.doctree  command_line.doctree  configuration.doctree  contribute.doctree  getting_started.doctree  index.doctree  installing.doctree  plugins.doctree  projects.doctree  todos.doctree
.doctrees/api/: psyplot.compat.doctree  psyplot.compat.pycompat.doctree  psyplot.config.doctree  psyplot.config.logsetup.doctree  psyplot.config.rcsetup.doctree  psyplot.data.doctree  psyplot.docstring.doctree  psyplot.doctree  psyplot.gdal_store.doctree  psyplot.plotter.doctree  psyplot.plugin_template.doctree  psyplot.project.doctree  psyplot.sphinxext.doctree  psyplot.sphinxext.extended_napoleon.doctree  psyplot.utils.doctree  psyplot.version.doctree  (+1 more)
.github/: issue_template.md  pull_request_template.md
.reuse/: add_license.py  shortcuts.yaml
_modules/: index.html  psyplot.html
_sources/: about.rst.txt  changelog.rst.txt  command_line.rst.txt  contribute.rst.txt  getting_started.rst.txt  plugins.rst.txt  todos.rst.txt
_static/: documentation_options.js  nc-table-styles.css
api/: psyplot.compat.html  psyplot.compat.pycompat.html  psyplot.config.html  psyplot.config.logsetup.html  psyplot.config.rcsetup.html  psyplot.data.html  psyplot.docstring.html  psyplot.gdal_store.html  psyplot.html  psyplot.plotter.html  psyplot.plugin_template.html  psyplot.project.html  psyplot.sphinxext.extended_napoleon.html  psyplot.sphinxext.html  psyplot.utils.html  psyplot.version.html  psyplot.warning.html
ci/: deploy_anaconda.py  deploy_anaconda.sh  install_python.ps1  requirements.txt  setup_append.py
develop/: framework.html  index.html  plugins_guide.html
docs/: Makefile  about.rst  accessors.rst  api.rst  apigen.bash  changelog.rst  command_line.rst  conf.py  configuration.rst  contribute.rst  contributing.rst  environment.yml  getting_started.rst  index.rst  installing.rst  make.bat  plugins.rst  projects.rst  psyplot-gui_environment.yml  psyplot_entry.enw  psyplot_environment.yml  requirements.txt
examples/: README.rst  example_cdo.ipynb  example_post.ipynb  example_sharing.ipynb  sharing_demo.nc
icon/: CreateICNS.sh  CreateICO.sh  icon.pkl  icon.py
psyplot/: __init__.py  __main__.py  _version.py  data.py  docstring.py  gdal_store.py  plotter.py  plugin_template.py  project.py  utils.py  version.py  warning.py
tests/: _base_testing.py  circumpolar_test.nc  conftest.py  icon_test.nc  logging.yml  main.py  rotated-pole-test.nc  simple_triangular_grid_si0.nc  test-t2m-1979-01-31T18-00-00.tif  test-t2m-1979-02-28T18-00-00.tif  test_data.py  test_gdalstore.py  test_main.py  test_plotter.py  test_plugin_template.py  test_project.py  test_rcsetup.py  test_utils.py
(+97 files in other folders)
